<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThePlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="action_location">Location</string>
    <string name="action_sort">Sort</string>
	<string name="action_exit">Exit</string>
	<string name="space_available">Used: 0.0GB Available: 0.0GB #Tracks: 0</string>
	<string name="play">Play</string>
	<string name="previous">Previous</string>
	<string name="rewind">Rewind</string>
	<string name="forward">Forward</string>
	<string name="next">Next</string>
	<string name="song_title">Song Title</string>
	<string name="zero">0:00</string>
	<string name="artist">Artist</string>
	<string name="album_title">Album Title</string>
    <string name="artist_text">artist</string>
    <string name="delete">Delete</string>
    <string name="played">Mark as Played</string>
    <string name="not_played">Mark Not Played</string>
    <string name="action_add">Add</string>
    <string name="submit">Submit</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="address">Address:</string>
    <string name="add_files">Add Tracks</string>
    <string name="number_files">Number Of Files:</string>
    <string name="zero_0">0</string>
    <string name="action_podcast">Podcasts</string>
    <string name="action_refresh">Refresh</string>

</resources>
