<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:showAsAction="ifRoom"
        android:title="Refresh"
        android:icon="@drawable/ic_refresh"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_location"
        android:showAsAction="ifRoom"
        android:title="@string/action_location"/>
    <item
        android:id="@+id/action_sort"
        android:showAsAction="never"
        android:title="@string/action_sort"/>
    <item
        android:id="@+id/action_add"
        android:showAsAction="never"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_exit"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
</menu>
