<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/song_title"
        android:text="@string/song_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/artist_text"
            android:id="@+id/textViewArtist"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/album_title"
            android:id="@+id/textViewAlbumTitle"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/buttonPrevious"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/previous"
        android:onClick="previous"
        android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:contentDescription="@string/rewind"
            android:onClick="rewind"
            android:src="@android:drawable/ic_media_rew" />

        <ImageButton
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:contentDescription="@string/play"
            android:onClick="play"
            android:src="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/buttonForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:contentDescription="@string/forward"
            android:onClick="forward"
            android:src="@android:drawable/ic_media_ff" />

                 <ImageButton
                     android:id="@+id/buttonNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14dp"
                     android:contentDescription="@string/next"
                     android:onClick="next"
                     android:src="@android:drawable/ic_media_next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="246dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/space_available"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    </LinearLayout>

