<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">-->
  <!--  android:background="?android:attr/activatedBackgroundIndicator">-->
   <!-- android:background="@drawable/list_item_selector"-->



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <CheckBox
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/checkBox"
        android:checked="true" />

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/song_title" />

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/song_title"
                android:text="@string/album_title" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/album_title"
                android:text="@string/artist" />
            </RelativeLayout>

</LinearLayout>

<!--</RelativeLayout>-->